--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,6 +31,7 @@
             android:layout_marginTop="16dp"
             android:drawableStart="@drawable/baseline_search_white"
             android:elevation="10dp"
+            android:background="@drawable/textview_text_background"
             android:text="Islamic"
             android:textColor="@color/white"
             app:layout_constraintEnd_toStartOf="@+id/textView2"
@@ -44,6 +45,7 @@
         android:layout_height="wrap_content"
         android:drawableStart="@drawable/baseline_search_white"
         android:elevation="10dp"
+            android:background="@drawable/textview_text_background"
         android:text="Ramadan"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="@+id/textView"
@@ -57,6 +59,7 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@drawable/textview_text_background"
         android:drawableStart="@drawable/baseline_search_white"
         android:elevation="10dp"
         android:text="Mockup"
